--- a/sass/layouts/_header.scss
+++ b/sass/layouts/_header.scss
@@ -1,8 +1,9 @@
 .header {
+  @include flexDir(initial, center, center);
 
   &__logo {
     @include flexDir(initial, center);
-    margin: 20px 0;
+    margin: 25px 0 15px;
 
     img {
       width: 50%;
