--- a/sass/main.scss
+++ b/sass/main.scss
@@ -2,8 +2,11 @@
 @import "./utils/fonctions";
 @import "./utils/mixins";
 @import "./base/base";
+@import "./components/retour-accueil";
+@import "./components/image-restaurant";
 @import "./layouts/header";
 @import "./layouts/footer";
+@import "./layouts/liste-menu";
 @import "./pages/chargement-accueil";
 @import "./pages/localisation-accueil";
 @import "./pages/fonctionnement-accueil";
