--- a/sass/pages/_chargement-accueil.scss
+++ b/sass/pages/_chargement-accueil.scss
@@ -1,11 +1,6 @@
-main {
-  z-index: -999;
-  visibility: hidden;
-  opacity: 0;
-  height: 0;
-  width: 0;
-  animation: affichage;
-  animation-delay: 2s;
+main:not(.liste) {
+  position: absolute;
+  animation: affichage 4s;
   animation-fill-mode: forwards;
 }
 
@@ -13,31 +8,27 @@ main {
   @include flexDir(initial, center, center);
   font-family: 'Shrikhand', sans-serif;
   font-size: 40px;
-  position: fixed;
-  z-index: 1;
+  position: absolute;
   width: 100%;
   height: 100%;
-  animation: chargement-fin;
-  animation-duration: 2s;
+  animation: chargement-fin 2s;
+  animation-delay: 3s;
   animation-fill-mode: forwards;
 
-    div {
-      animation: chargement 1.3s cubic-bezier(0, 0.5, 0.5, 1) infinite;
+    &__bloc {
+      animation: chargement $anim-dur backwards infinite cubic-bezier(0, 0.5, 0.5, 1) alternate-reverse;
       margin: 0 2px;
+      @include bloc-animation;
 
-        &:nth-child(1) {
-          color: map-get($couleurs, primaire);
-          animation-delay: -0.24s;
-        }
-
-        &:nth-child(2) {
-          color: map-get($couleurs, secondaire);
-          animation-delay: -0.12s;
-        }
-
-        &:nth-child(3) {
-          color: map-get($couleurs, tertiaire);
-          animation-delay: 0s;
+        &::after {
+          content: attr(data-miroir);
+          position: absolute;
+          top: 20px;
+          left: 0;
+          transform-origin: bottom;
+          transform: rotateX(180deg);
+          line-height: 0.90em;
+          opacity: 0.4;
         }
     }
 }
@@ -48,6 +39,7 @@ main {
     transform-origin: bottom;
     transform: scaleY(3);
   }
+
   50%, 100% {
     transform-origin: bottom;
     transform: scaleY(1);
@@ -56,27 +48,21 @@ main {
 
 @keyframes chargement-fin {
   0% {
-    opacity: 1;
-  }
-
-  75% {
-    opacity: 1;
+    transform: translateX(0);
   }
 
   100% {
-    z-index: -999;
-    position: absolute;
-    visibility: hidden;
-    opacity: 0;
+    transform: translateX(-9999px);
+
   }
 }
 
 @keyframes affichage {
+  0% {
+    transform: translateX(-9999px);
+  }
+
   100% {
-    z-index: 1;
-    visibility: visible;
-    opacity: 1;
-    height: 100%;
-    width: 100%;
+    transform: translateX(0);
   }
 }
