--- a/sass/pages/_restaurant-accueil.scss
+++ b/sass/pages/_restaurant-accueil.scss
@@ -18,6 +18,10 @@
       overflow: hidden;
       box-shadow: 1px 4px 8px rgba(0, 0, 0, 0.15);
 
+        &:hover {
+          box-shadow: 1px 4px 8px rgba(0, 0, 0, 0.30);
+        }
+
         &__image {
           @include flexDir(initial);
           position: relative;
