--- a/sass/utils/_variables.scss
+++ b/sass/utils/_variables.scss
@@ -7,6 +7,7 @@ $couleurs: (
         noir: black,
         blanc: white,
         transparent: transparent,
+        degrade: linear-gradient(#9356DC, #FF79DA)
 );
 
 $breakpoints: (
