--- a/sass/pages/_localisation-accueil.scss
+++ b/sass/pages/_localisation-accueil.scss
@@ -41,7 +41,7 @@
             &__envoyer {
               border: none;
               @include font(20px);
-              @include couleur(primaire, blanc);
+              @include couleur(degrade, blanc);
               padding: 20px 30px;
               border-radius: 30px;
               box-shadow: 1px 4px 6px rgba(0, 0, 0, 0.30);
