--- a/sass/layouts/_liste-menu.scss
+++ b/sass/layouts/_liste-menu.scss
@@ -11,20 +11,28 @@
       @include font(34px, 500);
       font-family: "Shrikhand", sans-serif;
 
+      @include mediaQueries(tablette) {
+        justify-content: initial;
+      }
+
         i {
           font-size: 26px;
-          transition: all .3s linear 0s;
-          color: transparent;
-          -webkit-text-stroke: 1px #000;
-          transform: scaleY(1.2);
           margin-top: 8px;
           margin-right: 20px;
+          @include couleur(blanc);
+          -webkit-background-clip:text;
+          color:transparent;
+          -webkit-text-stroke: 1px #000;
+          transform: scaleY(1.2);
+
+          @include mediaQueries(tablette) {
+            margin-left: 300px;
+          }
 
           &:hover {
             cursor: pointer;
             transition: all .3s linear 0s;
-            @include couleur(initial, primaire);
-            -webkit-text-stroke: 1px map-get($couleurs, primaire);
+            animation: btn-aime 1s forwards;
           }
         }
     }
@@ -32,12 +40,21 @@
     &__section {
       padding-bottom: 20px;
 
+      @include mediaQueries(tablette) {
+        @include flexDir(initial, space-between);
+        flex-wrap: wrap;
+      }
+
         &__titre {
           @include flexDir(column);
           @include font(20px, 500);
           color: lighten(black, 25%);
           margin-bottom: 25px;
           margin-left: 2px;
+
+          @include mediaQueries(tablette) {
+            flex: 100%;
+          }
 
             &::after {
               position: absolute;
@@ -61,6 +78,14 @@
           overflow: hidden;
           height: 0;
 
+          @include mediaQueries(tablette) {
+            width: 49%;
+          }
+
+          @include mediaQueries(ordinateur-grand) {
+            width: 32.5%;
+          }
+
             div:nth-child(1) {
               flex: 2;
               white-space: nowrap;
@@ -71,6 +96,8 @@
               @include font(20px, bold);
               margin-bottom: 5px;
               margin-top: 16px;
+              overflow: hidden;
+              text-overflow: ellipsis;
             }
 
             &__info {
@@ -120,7 +147,7 @@
 
         button {
           border: none;
-          @include couleur(primaire, blanc);
+          @include couleur(degrade, blanc);
           font-size: 20px;
           padding: 20px 60px;
           border-radius: 50px;
@@ -128,7 +155,7 @@
 
             &:hover {
               cursor: pointer;
-              background: lighten(map-get($couleurs, primaire), 3%);
+              filter: brightness(1.1);
               box-shadow: 2px 4px 8px rgba(0, 0, 0, 0.55);
             }
         }
@@ -138,9 +165,15 @@
 @keyframes volet {
   0% {
     height: 0;
+    opacity: 0;
+  }
+
+  50% {
+    opacity: 0.5;
   }
 
   100% {
     height: 75px;
+    opacity: 1;
   }
 }
